--- a/json/index.html
+++ b/json/index.html
@@ -261,7 +261,7 @@
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     -->
-    <script src="lama_on_node.bc.js"></script>
+    <script src="client.bc.js"></script>
 </body>
 
 </html>
