--- a/json/index.html
+++ b/json/index.html
@@ -28,13 +28,21 @@
     <link rel="canonical" href="http://www.example.com/">
     -->
 
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-    <link rel="stylesheet"
+    <!-- <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> -->
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
+    <!-- <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-orange.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <style>
+    <link rel="stylesheet" href="styles.css"> -->
+    <!-- Material Design Lite -->
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <!-- Material Design icon font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+    <!-- <style>
         #view-source {
             position: fixed;
             display: block;
@@ -49,77 +57,211 @@
             min-height: 400px;
 
         }
+    </style> -->
+    <style type="text/css">
+        #root {
+            height: vh;
+            width: 100%;
+            font-size: 0;
+            display: block;
+        }
+
+        #top {
+            font-size: 12px;
+            display: flex;
+        }
+
+        #top>* {
+            margin: 0px 50px 0px 0px;
+        }
+
+        #left,
+        #output_area {
+            display: inline-block;
+            /* zoom: 1;  */
+            vertical-align: top;
+            font-size: 12px;
+        }
+
+        #left {
+            width: 25vw;
+            height: 85vh;
+            margin: 10px;
+        }
+
+        #input_area {
+            width: 25vw;
+            height: 65vh;
+            background: rgb(186, 186, 225);
+        }
+
+        #output_area {
+            width: 65vw;
+            height: 100vh;
+            /* height: 300px; */
+            /*background: rgb(154, 210, 154); */
+            margin: 10px;
+            overflow: auto;
+            float: right;
+        }
+
+        #guideline_area {
+            width: 98vw;
+            height: 85vh;
+            padding: 2vw;
+            font-family: Monospace;
+        }
+
+        #settings_area {
+            width: 95vw;
+            height: 50vh;
+            padding: 5vw;
+            font-family: Monospace;
+        }
+
+        .generated_label {
+            border-style: dotted;
+            border-width: thin;
+        }
+
+
+        #send1 {
+            margin-bottom: 5px;
+        }
+
+        #parsing_modes {
+            width: 200px;
+            padding-left: 5px;
+            display: inline-block;
+        }
+
+        .example_container {
+            /* zoom: 1;  */
+            font-size: larger;
+            height: 250px;
+        }
+
+        /* Tooltip text */
+        .tooltip .tooltiptext {
+            visibility: hidden;
+            width: 120px;
+            background-color: black;
+            color: #fff;
+            text-align: center;
+            padding: 5px 0;
+            border-radius: 6px;
+
+            /* Position the tooltip text - see examples below! */
+            position: absolute;
+            z-index: 1;
+        }
+
+        /* Show the tooltip text when you mouse over the tooltip container */
+        .tooltip:hover .tooltiptext {
+            visibility: visible;
+        }
+
+        .temp_storage {
+            visibility: hidden;
+            height: 0px;
+        }
     </style>
+
 </head>
 
 <body>
+    <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+        <div class="mdl-tabs__tab-bar">
+            <a href="#starks-panel" class="mdl-tabs__tab is-active">Synth</a>
+            <a href="#guideline-panel" class="mdl-tabs__tab">Guideline</a>
+            <a href="#settings-panel" class="mdl-tabs__tab">Constants</a>
+        </div>
+
+        <div class="mdl-tabs__panel is-active" id="starks-panel">
+            <div id="left">
+                <button id="send1" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    Run bytecode
+                </button>
+                <label class="mdl-typography--subhead mdl-typography--text-center" style="display: flex;" for="demos">
+                    Choose a demo:
+                </label>
+                <select name="demos" id="demos" class="mdl-textfield__input"></select>
+            </div>
+            <div id="output_area">
+                Out will be here
+            </div>
+        </div>
+        <div class="mdl-tabs__panel" id="guideline-panel">
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="use_custom_guideline">
+                <input type="checkbox" id="use_custom_guideline" class="mdl-switch__input">
+                <span class="mdl-switch__label">Override default guideline</span>
+            </label>
+            <textarea id="guideline_area" class="mdl-textfield__input"> </textarea>
+            <!-- Floating Multiline Textfield -->
+            <!-- <form action="#">
+    <div class="mdl-textfield mdl-js-textfield">
+    <textarea class="mdl-textfield__input" type="text" id="guideline_area" ></textarea>
+    <label class="mdl-textfield__label" for="sample5">Text lines...</label>
+    </div>
+    </form> -->
+        </div>
+        <div class="mdl-tabs__panel" id="settings-panel">
+            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="auto_completion_toggle">
+                <input type="checkbox" id="auto_completion_toggle" class="mdl-switch__input">
+                <!-- TODO: how to mark it unchecked? -->
+                <span class="mdl-switch__label">Auto-completion of structure</span>
+            </label>
+            <div>
+                <label class="mdl-typography--subhead mdl-typography--text-center" for="parsing_modes">
+                    Parse where:</label>
+                <select name="parsing_modes" id="parsing_modes" class="mdl-textfield__input">
+                    <option value="client">Client</option>
+                    <option value="server">Server</option>
+                </select>
+            </div>
+            <textarea id="settings_area" class="mdl-textfield__input"> </textarea>
+        </div>
+    </div>
+
+    <!--
     <div class="demo-blog mdl-layout mdl-js-layout is-upgraded">
         <main class="mdl-layout__content">
             <div class="demo-blog__posts mdl-grid">
-                <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col">
+                <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col mdl-cell--4-col-desktop">
                     <div class="mdl-card__media mdl-color-text--grey-50">
                         <h3><a href="entry.html">Coffee Pic</a></h3>
-                        <!-- <textarea id="bc-json-area" /> -->
-                    </div>
-                    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
-                        <div class="minilogo"></div>
-                        <div>
-                            <strong>The Newist</strong>
-                            <span>2 days ago</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="mdl-card something-else mdl-cell mdl-cell--8-col mdl-cell--4-col-desktop">
-                    <!-- <button class="mdl-button mdl-js-ripple-effect mdl-js-button mdl-button--fab mdl-color--accent">
-                        <i class="material-icons mdl-color-text--white" role="presentation">add</i>
-                        <span class="visuallyhidden">add</span>
-                    </button> -->
-                    <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
-                        <!-- <img src="https://getmdl.io/templates/blog/images/logo.png">
-                        +1,337 -->
-                        <textarea class="mdl-textfield__input" id="my-text-area" type="text" rows="3"
-                            id="text-area">asdfasdf </textarea>
-                    </div>
-                    <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                        <select class="mdl-textfield__input" id="demos" name="octane">
-                            <!-- <option value="85">85</option>
-                            <option value="87">87</option>
-                            <option value="89">89</option>
-                            <option value="91">91</option> -->
-                        </select>
-                        <label class="mdl-textfield__label" for="octane">Octane</label>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </main>
-        <div class="mdl-layout__obfuscator"></div>
+                        
     </div>
-    <!-- <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/blog/" target="_blank"
-        id="view-source"
-        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--white">View
-        Source</a> -->
+    <div class="mdl-card__supporting-text meta mdl-color-text--grey-600">
+        <div class="minilogo"></div>
+        <div>
+            <strong>The Newist</strong>
+            <span>2 days ago</span>
+        </div>
+    </div>
+    </div>
+    <div class="mdl-card something-else mdl-cell mdl-cell--8-col ">
+        <div class="mdl-card__media mdl-color--white mdl-color-text--grey-600">
+            <textarea class="mdl-textfield__input" id="my-text-area" type="text" rows="3"
+                id="text-area">asdfasdf </textarea>
+        </div>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <select class="mdl-textfield__input" id="demos" name="octane">
+
+            </select>
+            <label class="mdl-textfield__label" for="octane">Octane</label>
+        </div>
+
+    </div>
+
+    </div>
+
+    </main>
+    <div class="mdl-layout__obfuscator"></div>
+    </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-
-    <!-- <script>
-    Array.prototype.forEach.call(document.querySelectorAll('.mdl-card__media'), function (el) {
-        var link = el.querySelector('a');
-        if (!link) {
-            return;
-        }
-        var target = link.getAttribute('href');
-        if (!target) {
-            return;
-        }
-        el.addEventListener('click', function () {
-            location.href = target;
-        });
-    });
-</script> -->
-
-    <script src="lama_on_node.bc.js"></script>
+    -->
+    <script src="client.bc.js"></script>
 </body>
 
 </html>
