--- a/json/index.html
+++ b/json/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -83,7 +84,15 @@
             font-size: 12px;
         }
 
-        #left {
+        #left_lama2json,
+        #output_lama2json {
+            display: inline-block;
+            /* zoom: 1;  */
+            vertical-align: top;
+            font-size: 12px;
+        }
+
+        #left #left_lama2json {
             width: 25vw;
             height: 85vh;
             margin: 10px;
@@ -95,7 +104,7 @@
             background: rgb(186, 186, 225);
         }
 
-        #output_area {
+        #output_area #output_area_json {
             width: 65vw;
             height: 100vh;
             /* height: 300px; */
@@ -172,9 +181,10 @@
 <body>
     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
         <div class="mdl-tabs__tab-bar">
-            <a href="#starks-panel" class="mdl-tabs__tab is-active">Synth</a>
-            <a href="#guideline-panel" class="mdl-tabs__tab">Guideline</a>
-            <a href="#settings-panel" class="mdl-tabs__tab">Constants</a>
+            <a href="#starks-panel" class="mdl-tabs__tab is-active">Run bytecode</a>
+            <a href="#lama2json-panel" class="mdl-tabs__tab">Lama to JSON</a>
+            <!-- <a href="#guideline-panel" class="mdl-tabs__tab">Guideline</a> -->
+            <!-- <a href="#settings-panel" class="mdl-tabs__tab">Constants</a> -->
         </div>
 
         <div class="mdl-tabs__panel is-active" id="starks-panel">
@@ -191,35 +201,21 @@
                 Out will be here
             </div>
         </div>
-        <div class="mdl-tabs__panel" id="guideline-panel">
-            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="use_custom_guideline">
-                <input type="checkbox" id="use_custom_guideline" class="mdl-switch__input">
-                <span class="mdl-switch__label">Override default guideline</span>
-            </label>
-            <textarea id="guideline_area" class="mdl-textfield__input"> </textarea>
-            <!-- Floating Multiline Textfield -->
-            <!-- <form action="#">
-    <div class="mdl-textfield mdl-js-textfield">
-    <textarea class="mdl-textfield__input" type="text" id="guideline_area" ></textarea>
-    <label class="mdl-textfield__label" for="sample5">Text lines...</label>
-    </div>
-    </form> -->
-        </div>
-        <div class="mdl-tabs__panel" id="settings-panel">
-            <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="auto_completion_toggle">
-                <input type="checkbox" id="auto_completion_toggle" class="mdl-switch__input">
-                <!-- TODO: how to mark it unchecked? -->
-                <span class="mdl-switch__label">Auto-completion of structure</span>
-            </label>
-            <div>
-                <label class="mdl-typography--subhead mdl-typography--text-center" for="parsing_modes">
-                    Parse where:</label>
-                <select name="parsing_modes" id="parsing_modes" class="mdl-textfield__input">
-                    <option value="client">Client</option>
-                    <option value="server">Server</option>
+        <div class="mdl-tabs__panel" id="lama2json-panel">
+            <div id="left_lama2json">
+                <button id="lamaToJsonBtn" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                    Lama to JSON
+                </button>
+                <label class="mdl-typography--subhead mdl-typography--text-center" style="display: flex;" for="demos">
+                    Choose a demo:
+                </label>
+                <select name="demos" id="lamaDemos" class="mdl-textfield__input">
+
                 </select>
             </div>
-            <textarea id="settings_area" class="mdl-textfield__input"> </textarea>
+            <div id="output_lama2json">
+                Out will be here
+            </div>
         </div>
     </div>
 
