feat: Fix on parser in the web
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/json/index.html
+++ b/json/index.html
@@ -92,14 +92,16 @@
             font-size: 12px;
         }
 
-        #left #left_lama2json {
-            width: 25vw;
+        #left,
+        #left_lama2json {
+            width: 35vw;
             height: 85vh;
             margin: 10px;
         }
 
-        #input_area {
-            width: 25vw;
+        #input_area,
+        #input_area_lama2json {
+            width: 35vw;
             height: 65vh;
             background: rgb(186, 186, 225);
         }
